@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-20T16:23:58Z",
+  "timestamp" : "2022-11-21T08:23:56Z",
   "count_outdated" : 2611,
   "uniques_outdated" : 702,
-  "count" : 2642,
-  "uniques" : 718,
+  "count" : 2643,
+  "uniques" : 719,
   "clones" : [
     {
       "timestamp": "2022-11-09T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 4, 5 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
