@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 9,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2022-11-20T00:00:00Z",
       "count": 5,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
