@@ -1,3 +1,11 @@
+2022-11-21T08:23:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3512656172 # 1048
+* notice: last 14d: unq all: 9 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 702 2611 / 718 2642
+* notice: next accum: outdated-unq outdated-all / unq all: 702 2611 / 719 2643
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-21]
+
 2022-11-20T16:23:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3508805630 # 1046
 * notice: last 14d: unq all: 9 31
